[package]
name = "anttp"
version = "0.3.20"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-http = "3"
actix-web = "4"
awc = "3"
anyhow = "1.0.95"
log = "0.4.21"
env_logger = "0.11.6"
serde = "1.0.210"
serde_json = "1.0.132"
autonomi = "0.3.6"
ant-evm = "0.1.9"
ant-bootstrap = "0.1.5"
xor_name = "5.0.0"
hex = "0.4.3"
color-eyre = "~0.6"
multiaddr = "0.18.2"
bytes = "1.8.0"
globset = "0.4.15"
mime = "0.3.17"
chrono = "0.4.39"

#[patch.crates-io]
#self_encryption = { path = "/home/paul/dev/self_encryption" }