[package]
name = "anttp"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-http = "3"
actix-web = "4"
actix-multipart = "0.7.2"
awc = "3"
anyhow = "1.0.95"
log = "0.4.26"
env_logger = "0.11.6"
serde = "1.0.218"
serde_json = "1.0.140"
autonomi = "0.4.0"
ant-evm = "0.1.10"
xor_name = "5.0.0"
hex = "0.4.3"
color-eyre = "~0.6"
bytes = "1.10.0"
globset = "0.4.16"
mime = "0.3.17"
chrono = "0.4.40"
tempdir = "0.3.7"
futures-util = "0.3.31"
tokio = "1.43.0"

#[patch.crates-io]
#self_encryption = { path = "/home/paul/dev/self_encryption" }